[[changelog]]
== Changelog


[[release-next]]
[float]
=== Unreleased
https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev3\...master[Check the HEAD diff]

 * added `max-event-queue-length` setting. ({pull}67[#67])
 * changed name that the agent reports itself with to the APM server from `elasticapm-python` to `python`. This aligns the Python agent with other languages. ({pull}104[#104])
 * BREAKING: renamed `server` configuration variable to `server_url` to better align with other language agents ({pull}105[#105]) 
[[release-v1.0.0.dev3]]
[float]
=== v1.0.0.dev3

https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev2\...v1.0.0.dev2[Check the diff]


 * added a background thread to process the transactions queue every 60 seconds (configurable) ({pull}68[#68])
 * adapted trace context for SQL traces to new API ({pull}77[#77])
 * ensured that transaction data is also passed through processors ({pull}84[#84])
 * added `uninstrument` function to reverse instrumentation,
   and exposed both `instrument` and `uninstrument` as public API in the `elasticapm` namespace  ({pull}90[#90])
 * added normalization of HTTP status codes into classes for the `transaction.result` field. A HTTP status of `200`
   will be turned into `HTTP 2xx`. The unchanged status code is still available in `context.response.status_code`.
   ({pull}85[#85])


[[release-v1.0.0.dev2]]
[float]
=== v1.0.0.dev2

https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev1\...v1.0.0.dev2[Check the diff]

 * added request context information for Flask ({pull}58[#58])
 * added response context information for Flask ({pull}65[#65])
 * BREAKING: changed the `SERVERS` list setting to a single `SERVER` string setting.
   With this change, we now only support sending events to a single server ({pull}59[#59])
 * BREAKING: removed root trace. Due to historical reason, we used to create a "root trace" which was equivalent
   to the transaction. This is no longer necessary. {pull}61[#61]
